--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <center><p>Welcome to Canada Post mail services, we try to provide all of canada with excellent and speedy delivery.</p></center><br>
         
-        <p style="font-size: large"> To track your package, fill in all fields below: </p><br />
+        <p style="font-size: large"> To track your package, click in the following link:</p><a href="info.html">here</a> <br />
         <form>
             First name:<br />
             <input type="text" name="fname"><br />
