--- a/index.html
+++ b/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <span>Canada Post  </span>
-        <center><h1 style="background-color:blue" style="font-size: 100px;">Canada Post <img src="logo.png" width="100" height="100"></h1></center>
+        <center><h1 style="background-color:navy" style="color: white;"> <img src="logo.png" width="100" height="100"></h1></center>
         <center><img src="cpost.png" ></center>
     </head>
     <body>
         <center><p>Welcome to Canada Post mail services, we try to provide all of canada with excellent and speedy delivery.</p></center><br>
         
-        <p style="font-size: large"> To track your package, click in the following link:</p><a href="info.html">here</a> <br />
-        <form>
-            First name:<br />
-            <input type="text" name="fname"><br />
-            Last name:<br />
-            <input type="text" name="lname"><br/>
-            Postal code:<br/>
-            <input type="text" name="pcode"><br/>
-            Phone number:<br/>
-            <input type="text" name="number"><br/>
-            Tracking number:<br/>
-            <input type="text" name="track"><br/>
-            <input type="submit">
-
-        </form>
+        <p style="font-size: large"> To track your package, click in the following link: <a href="info.html">here</a></p> <br />
 
     </body>
 </html>
