--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <center><h1 style="background-color:navy" style="color: white;"> <img src="logo.png" width="100" height="100"></h1></center>
+        <center><h1 style="background-color:navy"> <img src="logo.png" width="100" height="100"></h1></center>
         <center><img src="cpost.png" ></center>
     </head>
     <body>
