--- a/info.html
+++ b/info.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <head>  
+        <link rel="stylesheet" type="text/css" href="Style.css">
+        <h1 style="font-size: large;">Please create a profile to better estimate shipping times and recieve notifications during the delivery procress.</h1>
+    </head>
+    
     <body>
-
+        <br/>
         <form>
             First name:<br />
             <input type="text" name="fname"><br />
             Last name:<br />
             <input type="text" name="lname"><br/>
-            Postal code:<br/>
-            <input type="text" name="pcode"><br/>
+            Email:<br/>
+            <input type="text" name="email"><br/>
             Phone number:<br/>
             <input type="text" name="number"><br/>
-            Tracking number:<br/>
-            <input type="text" name="track"><br/>
+            Postal code:<br/>
+            <input type="text" name="pcode"><br/>
+            <br/>
             <input type="submit">
 
         </form>
