--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <body>
         <center><p>Welcome to Canada Post mail services, we try to provide all of canada with excellent and speedy delivery.</p></center><br>
         
-        <p style="font-size: large"> To track your package, click in the following link: <a href="info.html">here</a></p> <br />
+        <p style="font-size: large"> To track your package, click in the following link: <a onmouseover="resize(this, '150%')" onmouseout="resize(this, '100%')"  href="info.html">here</a></p> <br />
+
+        <script>
+            function resize(elem,per) { elem.style.fontSize = per; }
+        </script>
 
     </body>
 </html>
