--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <link rel="stylesheet" type="text/css" href="Style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <h1 style="font-size: large;">Please create a profile to better estimate shipping times and recieve notifications during the delivery procress.</h1>
     </head>
     
